--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
     #map { height: 100vh; width: 100vw; }
@@ -14,7 +15,7 @@
 var map = L.map('map', {
   minZoom: 1,
   maxZoom: 22
-}).setView([51.5, -0.09], 19);
+}).setView([51.898819375615844, 5.7732504428013165], 21);
 
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
   minZoom: 1,
@@ -56,7 +57,7 @@ function getRectangleCornersMeters(centerLatLng, width_m, height_m, angleDeg) {
 }
 
 // Initial rectangle properties
-var center = L.latLng(51.5, -0.09);
+var center = L.latLng(51.898819375615844, 5.7732504428013165);
 var width = 6;    // meters
 var height = 6;   // meters
 var angle = 0;    // degrees
@@ -86,9 +87,9 @@ centerMarker.on('drag', function(e) {
 // Drag rotation handle to rotate rectangle
 handleMarker.on('drag', function(e) {
   var handleLatLng = e.latlng;
-  // Compute angle between center and handle (ignore Earth's curvature for small distances)
-  var dx = (handleLatLng.lng - center.lng) * Math.cos(center.lat * Math.PI / 180) * 111320;
-  var dy = (handleLatLng.lat - center.lat) * 111320;
+  // Compute angle between center and handle
+  var dx = (handleLatLng.lng - center.lng) * Math.cos(center.lat * Math.PI / 180) * 6378137 * Math.PI / 180;
+  var dy = (handleLatLng.lat - center.lat) * 6378137 * Math.PI / 180;
   var newAngle = Math.atan2(dy, dx) * 180 / Math.PI - 45;
   angle = newAngle;
   corners = getRectangleCornersMeters(center, width, height, angle);
