--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@ var map = L.map('map', {
   maxZoom: 22
 }).setView([51.898819375615844, 5.7732504428013165], 18);
 
-L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+var streetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
   minZoom: 16,
   maxZoom: 22
-}).addTo(map);
+});
 
+  streetMap.addTo(map);
+  
+ var terrainMap = L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager_nolabels/{z}/{x}/{y}{r}.png', {
+	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+	subdomains: 'abcd',
+	minZoom: 16,
+  maxZoom: 22
+});
+	   terrainMap.addTo(map); 
+  
 // Utility: meters <-> lat/lng
 function metersToLatLng(centerLatLng, dx, dy) {
   var R = 6378137;
