--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@ var map = L.map('map', {
   maxZoom: 22
 });
 terrainMap.addTo(map); 
-
+var esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+	attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+});
+	esri_WorldImagery.addTo(map);
+	
 // Utility: meters <-> lat/lng
 function metersToLatLng(centerLatLng, dx, dy) {
   var R = 6378137;
